--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>INM420 Git Assignment</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
 
-    <!-- your google fonts here - ONLY NEED ONE rel="preconnect" -->
+    <!-- adding something your google fonts here - ONLY NEED ONE rel="preconnect" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Condensed all the google fonts link to a single link -->
