Image and name created in div

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
     <main>
         <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
         <h1>sachin</h1>
+        <div>
+            <img src="assets/images/Michelle-Hernandez.jpg" alt="flower arragements">
+            <h1>Michelle Hernandez</h1>
+        </div>
     </main>
 
     <footer>
