Added h1 for Rena Chen and uploaded an image

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <!-- your google fonts here - ONLY NEED ONE rel="preconnect" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
     <link
@@ -34,6 +35,7 @@
     <main>
         <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
         <h1>sachin</h1>
+        <h1 class="renachen">Rena Chen</h1>
     </main>
 
     <footer>
