--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,9 @@
     </header>
 
     <main>
-        <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
-        <h1>sachin</h1>
+        <!-- <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
+        <h1>sachin</h1> -->
+        <h2>Aroosha</h2>
     </main>
 
     <footer>
