Style update and add image
Style update and add image

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
         <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
         <h1>sachin</h1>
         <h1 class="hyelim">Hyelim Kim</h1>
+        <h1 class="yuancheng-ma">Yuancheng Ma</h1>
+        <img src="assets/images/yuancheng-ma.jpg" alt="Yuancheng Ma" class="yuancheng-ma-img">
     </main>
 
     <footer>
