--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <main>
         <p>Style your name by editing the stylesheet, commit/push your changes to the remote repo.</p>
         <h1>sachin</h1>
-        <h1 class="ShuoyanMA"></h1>
+        <h1 class="ShuoyanMA">Shuoyan Ma</h1>
     </main>
 
     <footer>
