--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         <h1 class="renachen">Rena Chen</h1>
         <h1 id="wiljay">Wiljay Flores</h1>
         <h1 class="pitch">Pitch Gubtapol</h1>
+        <h1 id="serin">Serin Han</h1>
     </main>
 
     <footer>
