--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moo+Lah+Lah&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Condiment&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jersey+10&display=swap" rel="stylesheet">
 
     <!-- Condensed all the google fonts link to a single link -->
@@ -53,6 +56,7 @@
         <h1 id="wiljay">Wiljay Flores</h1>
         <h1 class="pitch">Pitch Gubtapol</h1>
         <h1 id="serin">Serin Han</h1>
+        <h1 class="arn"> Arn Alimojaned</h1>
     </main>
 
     <footer>
