added name, name styled, image added

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         <h2>Aroosha</h2>
         <h1>Alexia</h1>
         <h1>sachin</h1>
+        <h1 id="georget">George</h1>
         <article class="name-wrapper">
             <img src="assets/images/abdulwaheedkhansowdagar.jpg" alt="Waheed Khan" class="profile-img" />
             <h1 class="waheed-name">Abdul Waheed Khan Sowdagar</h1>
