--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <main>
-        <h2>Aroosha</h2>
+        <h1 id="Aroosha">Aroosha</h1>
         <h1>Alexia</h1>
         <h1>sachin</h1>
         <h1 id="georget">George</h1>
