Updated name + styling

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
         </section>
         <h1 id="chingwen">ChingWen Huang</h1>
         <h1 id="caiyu">CaiYuWang</h1>
+        <h1 id="shanellecruz">Shanelle Cruz</h1>
 
     </main>
 
