Add Cora‘s style and pic

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
         <h1 id="ramisha">Ramisha Wasim</h1>
         <h1 id="christine">Christine Nguyen</h1>
         <h1 id="hannah">Hannah Cho</h1>
+        <h1 id="cora-rainbow">Cora Chen</h1>
 
         <section class="stephanie-animation">
             <article class="cradle-box">
