Added my name style

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         <h1 id="christine">Christine Nguyen</h1>
         <h1 id="hannah">Hannah Cho</h1>
         <h1 id="cora-rainbow">Cora Chen</h1>
+        <h1 class="hlye-style"> Nang Hlyke Mouk Khao</h1>
 
         <section class="stephanie-animation">
             <article class="cradle-box">
