--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
         <h1 id="chingwen">ChingWen Huang</h1>
         <h1 id="caiyu">CaiYuWang</h1>
         <h1 id="shanellecruz">Shanelle Cruz</h1>
+        <h1 id="erik">Erik Platonov</h1>
 
     </main>
 
