Juan Git Assignment
Juan Git Assignment

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Playwrite+NZ+Basic:wght@100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
 
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
@@ -83,6 +84,7 @@
         <h1 id="shanellecruz">Shanelle Cruz</h1>
         <h1 id="adeline">Adeline Lima</h1>
         <h1 id="c">Maria Clairinne Edrea Roesli</h1>
+        <h1 class=" juan glitch" data-text="Juan David">Juan David</h1>
 
     </main>
 
