--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Playwrite+NZ+Basic:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
 
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
@@ -61,6 +62,8 @@
         <h1 id="ramisha">Ramisha Wasim</h1>
         <h1 id="christine">Christine Nguyen</h1>
         <h1 id="hannah">Hannah Cho</h1>
+        <h1 id="cora-rainbow">Cora Chen</h1>
+        <h1 id="parneet">Parneet Singh</h1>
 
         <section class="stephanie-animation">
             <article class="cradle-box">
@@ -78,6 +81,8 @@
         <h1 id="chingwen">ChingWen Huang</h1>
         <h1 id="caiyu">CaiYuWang</h1>
         <h1 id="shanellecruz">Shanelle Cruz</h1>
+        <h1 id="adeline">Adeline Lima</h1>
+        <h1 id="c">Maria Clairinne Edrea Roesli</h1>
         <h1 id="erik">Erik Platonov</h1>
 
     </main>
