--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
         <h1 id="hannah">Hannah Cho</h1>
         <h1 id="cora-rainbow">Cora Chen</h1>
         <h1 id="parneet">Parneet Singh</h1>
+        <h1 id="jin-kim">Jin Kim</h1>
 
         <section class="stephanie-animation">
             <article class="cradle-box">
