--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Playwrite+NZ+Basic:wght@100..400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
@@ -85,6 +86,7 @@
         <h1 id="adeline">Adeline Lima</h1>
         <h1 id="c">Maria Clairinne Edrea Roesli</h1>
         <h1 class=" juan glitch" data-text="Juan David">Juan David</h1>
+        <h1 id="erik">Erik Platonov</h1>
 
     </main>
 
