--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap" rel="stylesheet">
 
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
@@ -90,6 +91,7 @@
         <h1 class=" juan glitch" data-text="Juan David">Juan David</h1>
         <h1 id="erik">Erik Platonov</h1>
         <h1 id="tiago">Tiago Rocha</h1>
+        <h1 id="luis">Luis Minjarez</h1>
 
     </main>
 
