--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         <h1 id="parneet">Parneet Singh</h1>
         <h1 id="jin-kim">Jin Kim</h1>
         <article class="name-wrapper">
-            <img id = "van-tran-img" src="assets/images/Van Tran.jpg" alt="van-tran" />
+            <img id = "van-tran-img" src="assets/images/Van-Tran.jpg" alt="van-tran" />
             <h1 id="van-tran">Van Tran</h1>
         </article>
         
