--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Meow+Script&family=Mulish:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+
 
     <!-- Condensed all the google fonts link to a single link -->
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
@@ -97,6 +99,11 @@
         <h1 id="erik">Erik Platonov</h1>
         <h1 id="tiago">Tiago Rocha</h1>
         <h1 id="luis">Luis Minjarez</h1>
+
+        <section class="image-section">
+            <img src="assets/images/alizaceralde.png" alt="Bread" class="bread-image">
+            <h1 id="aliza">Aliza Ceralde</h1>
+        </section>
 
     </main>
 
