Add styled name

--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,11 @@
             <h1 id="aliza">Aliza Ceralde</h1>
         </section>
 
+        <article class="ekaterinagusarova-wrapper">
+            <img src="assets/images/EkaterinaGusarova.png" alt="Ekaterina Gusarova" class="ekaterinagusarova-img" />
+            <h1 id="ekaterinagusarova">EKATERINA GUSAROVA</h1>
+        </article>
+
     </main>
 
     <footer>
