--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,8 @@
         <h1 id="hannah">Hannah Cho</h1>
         <h1 id="cora-rainbow">Cora Chen</h1>
         <h1 id="parneet">Parneet Singh</h1>
+        <h1 id="Rej">Rej Retizos</h1>
+
         <h1 id="jin-kim">Jin Kim</h1>
         <div class="sidiv">
             <img class="sidGif" src="assets/images/sidGif.gif" alt="">
@@ -117,6 +119,7 @@
         <h1 id="erik">Erik Platonov</h1>
         <h1 id="tiago">Tiago Rocha</h1>
         <h1 id="luis">Luis Minjarez</h1>
+        
 
         <section class="image-section">
             <img src="assets/images/alizaceralde.png" alt="Bread" class="bread-image">
