--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="image/YuchingKao.jpg" alt="YuchingKao's Photo" class="profile-photo">
+    <img src="public/assets/images/YuchingKao.jpg" alt="YuchingKao's Photo" class="profile-photo">
     <div class="yuchingkao-name">YuchingKao</div>
 </body>
 </html>
