--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 
     <!-- Condensed all the google fonts link to a single link   -->
@@ -122,6 +123,13 @@
             <img src="assets/images/alizaceralde.png" alt="Bread" class="bread-image">
             <h1 id="aliza">Aliza Ceralde</h1>
         </section>
+
+        <marquee class="daniellesisican" direction="down" behavior="alternate" scrollamount="30">
+            <marquee behavior="alternate" scrollamount="20" >
+                <h1 class="daniname">Danielle</h1>   
+                <img class="danipic" src="./assets/images/daniellesisican.png">     
+            </marquee>
+        </marquee>
 
     </main>
 
