--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,10 @@
             <h1 id="ekaterinagusarova">EKATERINA GUSAROVA</h1>
         </article>
 
+        <article class="yuchingkao-wrapper">
+            <img src="assets/images/YuchingKao.jpg" alt="yuchingkao" class="yuchingkao-img" />
+            <h1 id="yuchingkao">yuchingkao</h1>
+        </article>
     </main>
 
     <footer>
