--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
 
         <article class="yuchingkao-wrapper">
             <img src="assets/images/YuchingKao.jpg" alt="yuchingkao" class="yuchingkao-img" />
-            <h1 id="yuchingkao">yuchingkao</h1>
+            <h1 id="yuchingkao">yuchingkao.</h1>
         </article>
     </main>
 
