--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,11 @@
             <img src="assets/images/EkaterinaGusarova.png" alt="Ekaterina Gusarova" class="ekaterinagusarova-img" />
             <h1 id="ekaterinagusarova">EKATERINA GUSAROVA</h1>
         </article>
-
+        
+        <article>
+            <img src="public/assets/images/YuchingKao.jpg" alt="YuchingKao's Photo" class="profile-photo">
+            <div class="yuchingkao-name">YuchingKao</div>
+        </article>
     </main>
 
     <footer>
