html, css, image

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/vld6fnn.css">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+NZ+Basic:wght@100..400&display=swap"
         rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <!-- fontshare cdn -->
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400&f[]=nippo@300,400&display=swap"
         rel="stylesheet">
@@ -120,6 +120,7 @@
         <h1 id="erik">Erik Platonov</h1>
         <h1 id="tiago">Tiago Rocha</h1>
         <h1 id="luis">Luis Minjarez</h1>
+        <h1 id="alecia">Alecia Huang</h1>
         
 
         <section class="image-section">
