--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
         <h1 id="cora-rainbow">Cora Chen</h1>
         <h1 id="parneet">Parneet Singh</h1>
         <h1 id="Rej">Rej Retizos</h1>
-
+        
         <h1 id="jin-kim">Jin Kim</h1>
         <div class="sidiv">
             <img class="sidGif" src="assets/images/sidGif.gif" alt="">
@@ -137,7 +137,10 @@
             <img src="assets/images/EkaterinaGusarova.png" alt="Ekaterina Gusarova" class="ekaterinagusarova-img" />
             <h1 id="ekaterinagusarova">EKATERINA GUSAROVA</h1>
         </article>
-        
+        <article class="ekaterinagusarova-wrapper">
+            <img src="assets/images/Kat.png" alt="Ekaterina Gusarova" class="ekaterinagusarova-img" />
+            <h1 id="ekaterinagusarova">Kathleen</h1>
+        </article>
         <article>
             <img src="assets/images/YuchingKao.jpg" alt="YuchingKao's Photo" class="profile-photo">
             <div class="yuchingkao-name">YuchingKao</div>
