--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kathleen</title>
+    <title>YuchingKao</title>
     <link rel="stylesheet" href="public/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="public/assets/images/Kat.png" alt="Cute Cat" class="profile-photo" />
-    <div class="kathleen-name">Kathleen</div>
+    <img src="public/assets/images/YuchingKao.jpg" alt="Yuching Kao" class="profile-photo" />
+    <div class="kathleen-name">YuchingKao</div>
 </body>
 </html>
