--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
 
 
     <!-- Condensed all the google fonts link to a single link   -->
@@ -146,6 +147,12 @@
             <img src="assets/images/YuchingKao.jpg" alt="YuchingKao's Photo" class="profile-photo">
             <div class="yuchingkao-name">YuchingKao</div>
         </article>
+        <div class="mune-wrapper">
+        <img
+            src="assets/images/purplemoon.png" alt="A purple coloured moon" class="mune-moon">
+        <div class="mune-name">Mune Arimado</div>
+        </div>
+
     </main>
 
     <footer>
