--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
 
     <!-- Condensed all the google fonts link to a single link   -->
@@ -86,6 +87,14 @@
         <h1 id="cora-rainbow">Cora Chen</h1>
         <h1 id="parneet">Parneet Singh</h1>
         <h1 id="Rej">Rej Retizos</h1>
+
+        <section id="steven">
+            <img src="assets/images/Steven Chen.gif" alt="up movie 😛">
+            <h1>Steven Chen</h1>
+            <div id="fazbear">
+                <img src="assets/images/Steven Chen 2.gif" alt="har harr har har harr">
+            </div>
+        </section>
         
         <h1 id="jin-kim">Jin Kim</h1>
         <div class="sidiv">
