--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,10 @@
             src="assets/images/purplemoon.png" alt="A purple coloured moon" class="mune-moon">
         <div class="mune-name">Mune Arimado</div>
         </div>
+        <article class="name-wrapper">
+            <img src="assets/images/wenyiqi.gif" alt="Wenyi Qi" class="profile-img wenyiqi-photo" />
+            <h1 class="wenyiqi-name">Wenyi Qi</h1>
+        </article>
 
     </main>
 
