Add Johara styled section with moon, hamster, bottom-center name, cute font

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 
     <!-- your google fonts here - ONLY NEED ONE rel="preconnect" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     <link
@@ -164,6 +167,12 @@
         <article class="name-wrapper">
             <img src="assets/images/wenyiqi.gif" alt="Wenyi Qi" class="profile-img wenyiqi-photo" />
             <h1 class="wenyiqi-name">Wenyi Qi</h1>
+            <div class="johara-wrapper">
+                <img src="assets/images/johara-hamster.png" class="johara-hamster" alt="hamster" />
+                <h1 class="johara-name">Johara</h1>
+            </div>
+                        
+              
         </article>
 
     </main>
