--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YuchingKao</title>
-    <link rel="stylesheet" href="public/assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+
+  <link rel="stylesheet" href="public/assets/css/style.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <img src="public/assets/images/YuchingKao.jpg" alt="Yuching Kao" class="profile-photo" />
-    <div class="kathleen-name">YuchingKao</div>
+  <img src="public/assets/images/YuchingKao.jpg" alt="Yuching Kao" class="profile-photo" />
+
 </body>
 </html>
